Fix multi-select tag styling in dark mode on card fieldsets.

--- a/less/v2/forms.less
+++ b/less/v2/forms.less
@@ -440,7 +440,8 @@
     cursor: var(--cursor-pointer);
     font-size: var(--font-size-10);
     border: var(--dnd5e-border-gold);
-    background: var(--dnd5e-background-card);
+    border: 1px solid var(--multi-select-tag-border);
+    background: var(--multi-select-tag-background);
     border-radius: 3px;
     &:hover a { text-shadow: 0 0 6px var(--color-shadow-primary); }
   }
